--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,8 +12,12 @@ jobs:
     steps:
     - name: Applications installing...
       run: sudo apt-get update && sudo apt-get install -y wget gcc make git
-    - name: Golang installing v1.16...
-      run: wget https://dl.google.com/go/go1.23.0.linux-amd64.tar.gz && sudo tar -C /opt -xzf go1.23.0.linux-amd64.tar.gz
+    - name: Set up Go 1.23
+      uses: actions/setup-go@v2
+      with:
+          go-version: ^1.23.0
+    - name: Go-peer version
+      run: export PATH=$PATH:$(go env GOPATH)/bin && go version
     - name: Hidden-Lake downloading...
       run: git clone --depth=1 https://github.com/number571/hidden-lake.git
     - name: Hidden-Lake deps installing...
