--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,9 +18,7 @@ jobs:
           go-version: 1.23.0
     - name: Go-peer version
       run: export PATH=$PATH:$(go env GOPATH)/bin && go version
-    - name: Hidden-Lake downloading...
-      run: git clone --depth=1 https://github.com/number571/hidden-lake.git
     - name: Hidden-Lake deps installing...
-      run: export PATH=$PATH:$(go env GOPATH)/bin && make install-deps -C hidden-lake
+      run: export PATH=$PATH:$(go env GOPATH)/bin && make install-deps
     - name: Hidden-Lake lint/test running...
-      run: export PATH=$PATH:$(go env GOPATH)/bin && make -C hidden-lake
+      run: export PATH=$PATH:$(go env GOPATH)/bin && make
