--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,7 @@ jobs:
   build:
     runs-on: ubuntu-20.04
     steps:
+    - uses: actions/checkout@v4
     - name: Applications installing...
       run: sudo apt-get update && sudo apt-get install -y wget gcc make git
     - name: Set up Go 1.23
@@ -17,7 +18,7 @@ jobs:
       with:
           go-version: 1.23.0
     - name: Go-peer version
-      run: export PATH=$PATH:$(go env GOPATH)/bin && go version
+      run: go version
     - name: Install Hidden-Lake repository
       run: go get .
     - name: Hidden-Lake deps installing...
