--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,24 +3,17 @@ name: build
 on:
   push:
     branches: [ "master", "develop" ]
-  pull_request:
-    branches: [ "master", "develop" ]
-
 jobs:
   build:
     runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v4
-    - name: Applications installing...
-      run: sudo apt-get update && sudo apt-get install -y wget gcc make git
     - name: Set up Go 1.23
       uses: actions/setup-go@v2
       with:
           go-version: 1.23.0
-    - name: Go-peer version
-      run: go version
-    - name: Install Hidden-Lake repository
-      run: go get .
+    - name: Applications installing...
+      run: sudo apt-get update && sudo apt-get install -y wget
     - name: Hidden-Lake deps installing...
       run: export PATH=$PATH:$(go env GOPATH)/bin && make install-deps
     - name: Hidden-Lake lint/test running...
