--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,14 +2,13 @@ name: build
 
 on:
   push:
-    branches: [ "master", "develop" ]
+    branches: ["master", "develop"]
 jobs:
   build:
     runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Go 1.23
-      uses: actions/setup-go@v2
+    - uses: actions/setup-go@v2
       with:
           go-version: 1.23.0
     - name: Applications installing...
