--- a/networks.yml
+++ b/networks.yml
@@ -11,7 +11,7 @@ networks:
         location: Russia/Moscow
         logging: false
         host: 94.103.91.81
-        ports: [9581, 9582]
+        port: 9581
   j2BR39JfDf7Bajx3:
     <<: *default_settings
     connections: 
@@ -19,7 +19,7 @@ networks:
         location: Russia/Moscow
         logging: false
         host: 185.43.4.253
-        ports: [9581, 9582]
+        port: 9581
   kf92j74Nof92n9F4:
     <<: *default_settings
     connections: 
@@ -27,7 +27,7 @@ networks:
         location: Russia/Moscow
         logging: false
         host: 195.133.1.126
-        ports: [9581, 9582]
+        port: 9581
   oi4r9NW9Le7fKF9d:
     <<: *default_settings
     connections: 
@@ -35,12 +35,12 @@ networks:
         location: Russia/Novosibirsk
         logging: true
         host: 193.233.18.245
-        ports: [9581, 9582]
+        port: 9581
   _default_network_:
     <<: *default_settings
     connections: # test only
       - provider: _provider_
         location: _location_
         logging: true
-        host: xxx.xxx.xxx.xxx
-        ports: [1, 2]
+        host: 127.0.0.1
+        port: 9581
