--- a/cmd/hlc/hlc.yml
+++ b/cmd/hlc/hlc.yml
@@ -5,3 +5,9 @@ logging:
 services:
 - hidden-lake-service
 - hidden-lake-messenger
+# - hidden-lake-filesharer
+# - hidden-lake-remoter
+# - hidden-lake-traffic
+# - hidden-lake-encryptor
+# - hidden-lake-loader
+# - hidden-lake-adapter=common
