--- a/examples/anonymity/messenger/simple/node1_hlm/hla_tcp.yml
+++ b/examples/anonymity/messenger/simple/node1_hlm/hla_tcp.yml
@@ -7,4 +7,6 @@ logging:
 address:
   tcp: 127.0.0.1:9522
   http: 127.0.0.1:9521
-endpoint: 127.0.0.1:9572
+endpoint: 127.0.0.1:8571
+connections:
+  - node2_hlc:9522
