--- a/examples/anonymity/echo_service/routing/middle_hla_tcp_2/hla_tcp.yml
+++ b/examples/anonymity/echo_service/routing/middle_hla_tcp_2/hla_tcp.yml
@@ -3,10 +3,10 @@ settings:
   work_size_bits: 22
   network_key: oMj49BD8he1n8bfq
 logging:
-  - info
-  - warn
-  - erro
+- info
+- warn
+- erro
 address:
-  tcp: :6581
+  external: :6581
 connections:
-  - middle_hlt_2:6581
+  - middle_hla_tcp_1:6581
