--- a/examples/anonymity/filesharer/routing/docker-compose.yml
+++ b/examples/anonymity/filesharer/routing/docker-compose.yml
@@ -21,28 +21,28 @@ services:
       - 7070:7070
     networks:
       - hidden-lake
-  middle_hlt_1:
+  middle_hla_tcp_1:
     build:
       context: ./../../../../
-      dockerfile: cmd/hlt/Dockerfile
+      dockerfile: cmd/hla/hla_tcp/Dockerfile
     environment:
-      - SERVICE_PATH=examples/anonymity/filesharer/routing/middle_hlt_1
+      - SERVICE_PATH=examples/anonymity/filesharer/routing/middle_hla_tcp_1
     networks:
       - hidden-lake
-  middle_hlt_2:
+  middle_hla_tcp_2:
     build:
       context: ./../../../../
-      dockerfile: cmd/hlt/Dockerfile
+      dockerfile: cmd/hla/hla_tcp/Dockerfile
     environment:
-      - SERVICE_PATH=examples/anonymity/filesharer/routing/middle_hlt_2
+      - SERVICE_PATH=examples/anonymity/filesharer/routing/middle_hla_tcp_2
     networks:
       - hidden-lake
-  middle_hlt_3:
+  middle_hla_tcp_3:
     build:
       context: ./../../../../
-      dockerfile: cmd/hlt/Dockerfile
+      dockerfile: cmd/hla/hla_tcp/Dockerfile
     environment:
-      - SERVICE_PATH=examples/anonymity/filesharer/routing/middle_hlt_3
+      - SERVICE_PATH=examples/anonymity/filesharer/routing/middle_hla_tcp_3
     networks:
       - hidden-lake
 networks:
