--- a/examples/anonymity/remoter/routing/docker-compose.yml
+++ b/examples/anonymity/remoter/routing/docker-compose.yml
@@ -11,35 +11,35 @@ services:
   send_hls:
     build:
       context: ./../../../../
-      dockerfile: cmd/hls/Dockerfile
+      dockerfile: cmd/hlc/Dockerfile
     environment:
       - SERVICE_PATH=examples/anonymity/remoter/routing/send_hls
     ports:
       - 7572:7572
     networks:
       - hidden-lake
-  middle_hlt_1:
+  middle_hla_tcp_1:
     build:
       context: ./../../../../
-      dockerfile: cmd/hlt/Dockerfile
+      dockerfile: cmd/hla/hla_tcp/Dockerfile
     environment:
-      - SERVICE_PATH=examples/anonymity/remoter/routing/middle_hlt_1
+      - SERVICE_PATH=examples/anonymity/remoter/routing/middle_hla_tcp_1
     networks:
       - hidden-lake
-  middle_hlt_2:
+  middle_hla_tcp_2:
     build:
       context: ./../../../../
-      dockerfile: cmd/hlt/Dockerfile
+      dockerfile: cmd/hla/hla_tcp/Dockerfile
     environment:
-      - SERVICE_PATH=examples/anonymity/remoter/routing/middle_hlt_2
+      - SERVICE_PATH=examples/anonymity/remoter/routing/middle_hla_tcp_2
     networks:
       - hidden-lake
-  middle_hlt_3:
+  middle_hla_tcp_3:
     build:
       context: ./../../../../
-      dockerfile: cmd/hlt/Dockerfile
+      dockerfile: cmd/hla/hla_tcp/Dockerfile
     environment:
-      - SERVICE_PATH=examples/anonymity/remoter/routing/middle_hlt_3
+      - SERVICE_PATH=examples/anonymity/remoter/routing/middle_hla_tcp_3
     networks:
       - hidden-lake
 networks:
