--- a/examples/anonymity/echo_service/prod_test/recv_hls/hls.yml
+++ b/examples/anonymity/echo_service/prod_test/recv_hls/hls.yml
@@ -11,7 +11,7 @@ address:
   external: 127.0.0.1:8571
 services:
   hidden-echo-service: recv_hls_service:8080
-adapters:
+endpoints:
   - 127.0.0.1:8522
 friends:
   Alice: >-
