--- a/examples/anonymity/messenger/group/node1_hlm/hls.yml
+++ b/examples/anonymity/messenger/group/node1_hlm/hls.yml
@@ -12,7 +12,7 @@ address:
   internal: :8572
 services:
   hidden-lake-messenger: 127.0.0.1:8081
-adapters:
+endpoints:
 - 127.0.0.1:8522
 friends:
   # Alice = Group user
