--- a/examples/anonymity/messenger/group/node3_hlm/hls.yml
+++ b/examples/anonymity/messenger/group/node3_hlm/hls.yml
@@ -12,7 +12,7 @@ address:
   internal: :6572
 services:
   hidden-lake-messenger: 127.0.0.1:6061
-adapters:
+endpoints:
 - 127.0.0.1:6522
 friends:
   # Alice = Group user
