--- a/cmd/hla/hla_tcp/Makefile
+++ b/cmd/hla/hla_tcp/Makefile
@@ -3,7 +3,7 @@ BINPATH=../../../bin
 .PHONY: default build run clean
 default: build run
 build:
-	$(GC) -o $(BINPATH)/hla_tcp ./cmd/hla_tcp
+	$(GC) -o $(BINPATH)/hla_tcp ./cmd/hla/hla_tcp
 run:
 	./$(BINPATH)/hla_tcp
 clean:
