--- a/examples/echo_service/routing/docker-compose.yml
+++ b/examples/echo_service/routing/docker-compose.yml
@@ -28,7 +28,7 @@ services:
   middle_hla_tcp_1:
     build:
       context: ./../../../
-      dockerfile: cmd/hla_tcp/Dockerfile
+      dockerfile: cmd/hla/hla_tcp/Dockerfile
     environment:
       - SERVICE_PATH=examples/echo_service/routing/middle_hla_tcp_1
     networks:
@@ -36,7 +36,7 @@ services:
   middle_hla_tcp_2:
     build:
       context: ./../../../
-      dockerfile: cmd/hla_tcp/Dockerfile
+      dockerfile: cmd/hla/hla_tcp/Dockerfile
     environment:
       - SERVICE_PATH=examples/echo_service/routing/middle_hla_tcp_2
     networks:
@@ -44,7 +44,7 @@ services:
   middle_hla_tcp_3:
     build:
       context: ./../../../
-      dockerfile: cmd/hla_tcp/Dockerfile
+      dockerfile: cmd/hla/hla_tcp/Dockerfile
     environment:
       - SERVICE_PATH=examples/echo_service/routing/middle_hla_tcp_3
     networks:
