--- a/cmd/hls/hls.yml
+++ b/cmd/hls/hls.yml
@@ -14,6 +14,8 @@ address:
   # pprof: ""
 services:
   hidden-lake-messenger: 127.0.0.1:9592
+endpoints:
+- 127.0.0.1:9522
   # hidden-lake-filesharer: 127.0.0.1:9542
   # hidden-lake-remoter: 127.0.0.1:9532
 # friends:
