--- a/cmd/hlc/Dockerfile
+++ b/cmd/hlc/Dockerfile
@@ -12,4 +12,4 @@ RUN go build -o hlc ./cmd/hlc
 ENV SERVICE_NETWORK=""
 ENV SERVICE_PATH="."
 ENV SERVICE_THREADS="1"
-CMD ./hlc --path "${SERVICE_PATH}" --network "${SERVICE_NETWORK}" --threads ="${SERVICE_THREADS}"
+CMD ./hlc --path "${SERVICE_PATH}" --network "${SERVICE_NETWORK}" --threads "${SERVICE_THREADS}"
