--- a/cmd/hlf/hlf.yml
+++ b/cmd/hlf/hlf.yml
@@ -7,7 +7,7 @@ logging:
 - warn
 - erro
 address:
-  interface: 127.0.0.1:9541
-  incoming: 127.0.0.1:9542
+  internal: 127.0.0.1:9541
+  external: 127.0.0.1:9542
   # pprof: ""
 connection: 127.0.0.1:9572
