--- a/examples/messenger/group/node1_hlm/hlm.yml
+++ b/examples/messenger/group/node1_hlm/hlm.yml
@@ -5,6 +5,6 @@ logging:
 - warn
 - erro
 address:
-  interface: :8080
-  incoming: :8081
+  internal: :8080
+  external: :8081
 connection: 127.0.0.1:8572
