--- a/examples/messenger/prod_test/node2_hlm/hlm.yml
+++ b/examples/messenger/prod_test/node2_hlm/hlm.yml
@@ -5,6 +5,6 @@ logging:
 - warn
 - erro
 address:
-  interface: :7070
-  incoming: :7071
+  internal: :7070
+  external: :7071
 connection: node2_hlc:7572
