--- a/examples/messenger/simple/node1_hlm/hlm.yml
+++ b/examples/messenger/simple/node1_hlm/hlm.yml
@@ -6,6 +6,6 @@ logging:
 - warn
 - erro
 address:
-  interface: :8080
-  incoming: 127.0.0.1:8081
+  internal: :8080
+  external: 127.0.0.1:8081
 connection: 127.0.0.1:8572
