--- a/examples/messenger/simple/node2_hlm/hlm.yml
+++ b/examples/messenger/simple/node2_hlm/hlm.yml
@@ -6,6 +6,6 @@ logging:
 - warn
 - erro
 address:
-  interface: :7070
-  incoming: 127.0.0.1:7071
+  internal: :7070
+  external: 127.0.0.1:7071
 connection: 127.0.0.1:7572
