--- a/examples/messenger/routing/node2_hlm/hls.yml
+++ b/examples/messenger/routing/node2_hlm/hls.yml
@@ -12,6 +12,7 @@ address:
   external: :7571
   internal: :7572
 services:
+  hidden-lake-pinger: 127.0.0.1:7552
   hidden-lake-messenger: node2_hlc:7071
 endpoints:
 - 127.0.0.1:7522
