--- a/examples/messenger/simple/node1_hlm/hls.yml
+++ b/examples/messenger/simple/node1_hlm/hls.yml
@@ -10,6 +10,7 @@ address:
   external: 127.0.0.1:8571
   internal: 127.0.0.1:8572
 services:
+  hidden-lake-pinger: 127.0.0.1:8552
   hidden-lake-messenger: 127.0.0.1:8081
 endpoints:
 - 127.0.0.1:9522
