--- a/examples/messenger/simple/node2_hlm/hlc.yml
+++ b/examples/messenger/simple/node2_hlm/hlc.yml
@@ -4,5 +4,6 @@ logging:
   - erro
 services:
   - hidden-lake-service
+  - hidden-lake-pinger
   - hidden-lake-messenger
   - hidden-lake-adapter=tcp
