--- a/examples/Makefile
+++ b/examples/Makefile
@@ -4,4 +4,5 @@ clean:
 	make -C ./filesharer clean
 	make -C ./messenger clean
 	make -C ./remoter clean
+	make -C ./pinger clean
 	make -C ./echo_service clean
