--- a/examples/messenger/prod_test/node1_hlm/hls.yml
+++ b/examples/messenger/prod_test/node1_hlm/hls.yml
@@ -12,7 +12,7 @@ address:
   internal: :8572
 services:
   hidden-lake-pinger: 127.0.0.1:8552
-  hidden-lake-messenger: node1_hlc:8081
+  hidden-lake-messenger: 127.0.0.1:8081
 endpoints:
   - 127.0.0.1:8522
 friends:
