--- a/cmd/hls/hls.yml
+++ b/cmd/hls/hls.yml
@@ -3,7 +3,7 @@ settings:
   fetch_timeout_ms: 60000
   queue_period_ms: 5000
   # pow_parallel: 0
-  # qb_consumers: 0
+  # qbp_consumers: 0
   # work_size_bits: 0
   # network_key: ""
 logging:
