--- a/examples/echo_service/Makefile
+++ b/examples/echo_service/Makefile
@@ -3,6 +3,6 @@ default: clean
 clean:
 	make -C ./prod_test clean
 	make -C ./routing clean
-	make -C ./simple clean
+	make -C ./adapters clean
 request:
 	go run ./_request/main.go
