--- a/examples/echo_service/adapters/tcp/docker-compose.yml
+++ b/examples/echo_service/adapters/tcp/docker-compose.yml
@@ -2,25 +2,25 @@ version: "3"
 services:
   recv_hls_service:
     build:
-      context: ./../../../
+      context: ./../../../../
       dockerfile: examples/echo_service/_service/Dockerfile
     networks:
       - local-network
   recv_hls:
     build:
-      context: ./../../../
+      context: ./../../../../
       dockerfile: cmd/hlc/Dockerfile
     environment:
-      - SERVICE_PATH=examples/echo_service/adapters_set/recv_hls
+      - SERVICE_PATH=examples/echo_service/adapters/tcp/recv_hls
     networks:
       - local-network
       - hidden-lake
   send_hls:
     build:
-      context: ./../../../
+      context: ./../../../../
       dockerfile: cmd/hlc/Dockerfile
     environment:
-      - SERVICE_PATH=examples/echo_service/adapters_set/send_hls
+      - SERVICE_PATH=examples/echo_service/adapters/tcp/send_hls
     ports:
       - 7572:7572
     networks:
