--- a/configs/classic/hlc.yml
+++ b/configs/classic/hlc.yml
@@ -3,10 +3,10 @@ logging:
 - warn
 - erro
 services:
-- hidden-lake-adapter=tcp
 - hidden-lake-service
 - hidden-lake-pinger
 - hidden-lake-messenger
 # - hidden-lake-filesharer
 # - hidden-lake-remoter
+# - hidden-lake-adapter=tcp
 # - hidden-lake-adapter=http
