--- a/configs/multiplicative/hlc.yml
+++ b/configs/multiplicative/hlc.yml
@@ -4,9 +4,9 @@ logging:
 - erro
 services:
 - hidden-lake-adapter=tcp
+- hidden-lake-adapter=http
 - hidden-lake-service
 - hidden-lake-pinger
 - hidden-lake-messenger
 # - hidden-lake-filesharer
 # - hidden-lake-remoter
-# - hidden-lake-adapter=http
