--- a/examples/echo_service/Makefile
+++ b/examples/echo_service/Makefile
@@ -4,5 +4,6 @@ clean:
 	make -C ./prod_test clean
 	make -C ./routing clean
 	make -C ./modes clean
+	make -C ./networks clean
 request:
 	go run ./_request/main.go
