--- a/examples/echo_service/networks/middle_hla_tcp/hl_networks.yml
+++ b/examples/echo_service/networks/middle_hla_tcp/hl_networks.yml
@@ -1,8 +1,6 @@
-settings: &default_settings
+default: &default_network
   message_size_bytes: 8192
-  fetch_timeout_ms: 60000
-  queue_period_ms: 5000
 networks:
   some_test_network:
-    <<: *default_settings
+    <<: *default_network
     work_size_bits: 22 # custom
