--- a/cmd/hla/hla_http/hla_http.yml
+++ b/cmd/hla/hla_http/hla_http.yml
@@ -1,7 +1,7 @@
-settings:
-  message_size_bytes: 8192
-  # work_size_bits: 0
-  # network_key: ""
+# settings:
+#   message_size_bytes: 0 # -> 8192
+#   work_size_bits: 0
+#   network_key: ""
 logging:
 - info
 - warn
