--- a/cmd/hla/hla_http/hla_http.yml
+++ b/cmd/hla/hla_http/hla_http.yml
@@ -2,6 +2,7 @@
 #   message_size_bytes: 0 # -> 8192
 #   work_size_bits: 0
 #   network_key: ""
+#   database_enabled: false
 logging:
 - info
 - warn
