--- a/examples/echo_service/modes/adaptive/recv_hls/hl_networks.yml
+++ b/examples/echo_service/modes/adaptive/recv_hls/hl_networks.yml
@@ -4,3 +4,5 @@ networks:
   some_test_network:
     <<: *default_network
     work_size_bits: 22 # custom
+    connections: 
+      - tcp://send_hls:7521
