--- a/cmd/hla/hla_http/hla_http.yml
+++ b/cmd/hla/hla_http/hla_http.yml
@@ -3,8 +3,8 @@
 #   work_size_bits: 0
 #   network_key: ""
 #   database_enabled: false
-#   send_timeout_ms: 0 # -> 5000
-#   recv_timeout_ms: 0 # -> 5000
+#   read_timeout_ms: 0 # -> 5000
+#   write_timeout_ms: 0 # -> 5000
 #   handle_timeout_ms: 0 # -> 30000
 logging:
 - info
