--- a/examples/messenger/simple/node2_hlm/hlk.yml
+++ b/examples/messenger/simple/node2_hlm/hlk.yml
@@ -8,7 +8,7 @@ logging:
 - erro
 address:
   external: 127.0.0.1:7571
-  internal: 127.0.0.1:7572
+  internal: :7572
 services:
   hidden-lake-service=pinger: 127.0.0.1:7552
   hidden-lake-service=messenger: 127.0.0.1:7071
