--- a/examples/echo_service/modes/multiplicative/recv_hls/hlc.yml
+++ b/examples/echo_service/modes/multiplicative/recv_hls/hlc.yml
@@ -2,7 +2,7 @@ logging:
   - info
   - warn
   - erro
-services:
+applications:
   - hidden-lake-kernel
   - hidden-lake-adapter=tcp
   - hidden-lake-adapter=http
