--- a/modes/multiplicative/hla-http.yml
+++ b/modes/multiplicative/hla-http.yml
@@ -3,6 +3,8 @@
 #   work_size_bits: 0
 #   network_key: ""
 #   database_enabled: false
+#   read_timeout_ms: 0 # -> 5000
+#   handle_timeout_ms: 0 # -> 5000
 logging:
 - info
 - warn
