--- a/examples/filesharer/simple/node2_hlf/hlk.yml
+++ b/examples/filesharer/simple/node2_hlf/hlk.yml
@@ -10,7 +10,7 @@ address:
   external: 127.0.0.1:7571
   internal: 127.0.0.1:7572
 services:
-  hidden-lake-service=filesharer: 127.0.0.1:7071
+  hls-filesharer: 127.0.0.1:7071
 endpoints:
   - 127.0.0.1:9522
 friends:
