--- a/examples/messenger/group/node1_hlm/hlk.yml
+++ b/examples/messenger/group/node1_hlm/hlk.yml
@@ -11,7 +11,7 @@ address:
   external: 127.0.0.1:8571
   internal: :8572
 services:
-  hidden-lake-service=messenger: 127.0.0.1:8081
+  hls-messenger: 127.0.0.1:8081
 endpoints:
 - 127.0.0.1:8522
 friends:
