--- a/examples/messenger/routing/node1_hlm/hlk.yml
+++ b/examples/messenger/routing/node1_hlm/hlk.yml
@@ -12,8 +12,8 @@ address:
   external: :8571
   internal: :8572
 services:
-  hidden-lake-service=pinger: 127.0.0.1:8552
-  hidden-lake-service=messenger: 127.0.0.1:8081
+  hls-pinger: 127.0.0.1:8552
+  hls-messenger: 127.0.0.1:8081
 endpoints:
 - 127.0.0.1:8522
 friends:
