--- a/cmd/hlc/hlc.yml
+++ b/cmd/hlc/hlc.yml
@@ -3,10 +3,10 @@ logging:
 - warn
 - erro
 applications:
-- hidden-lake-adapter=tcp
-- hidden-lake-kernel
-- hidden-lake-service=pinger
-- hidden-lake-service=messenger
-# - hidden-lake-service=filesharer
-# - hidden-lake-service=remoter
-# - hidden-lake-adapter=http
+- hlk
+- hla-tcp
+- hls-pinger
+- hls-messenger
+# - hla-http
+# - hls-filesharer
+# - hls-remoter
