--- a/examples/echo_service/modes/multiplicative/recv_hls/hlc.yml
+++ b/examples/echo_service/modes/multiplicative/recv_hls/hlc.yml
@@ -3,6 +3,6 @@ logging:
   - warn
   - erro
 applications:
-  - hidden-lake-kernel
-  - hidden-lake-adapter=tcp
-  - hidden-lake-adapter=http
+  - hlk
+  - hla-tcp
+  - hla-http
