--- a/examples/filesharer/prod_test/node2_hlf/hlc.yml
+++ b/examples/filesharer/prod_test/node2_hlf/hlc.yml
@@ -3,6 +3,6 @@ logging:
   - warn
   - erro
 applications:
-  - hidden-lake-kernel
-  - hidden-lake-service=filesharer
-  - hidden-lake-adapter=tcp
+  - hlk
+  - hla-tcp
+  - hls-filesharer
