--- a/examples/filesharer/routing/node1_hlf/hlk.yml
+++ b/examples/filesharer/routing/node1_hlf/hlk.yml
@@ -12,7 +12,7 @@ address:
   external: :8571
   internal: :8572
 services:
-  hidden-lake-service=filesharer: node1_hlc:8081
+  hls-filesharer: node1_hlc:8081
 endpoints:
 - 127.0.0.1:8522
 friends:
