--- a/examples/messenger/group/node2_hlm/hlk.yml
+++ b/examples/messenger/group/node2_hlm/hlk.yml
@@ -11,7 +11,7 @@ address:
   external: 127.0.0.1:7571
   internal: :7572
 services:
-  hidden-lake-service=messenger: 127.0.0.1:7071
+  hls-messenger: 127.0.0.1:7071
 endpoints:
 - 127.0.0.1:7522
 friends:
