--- a/examples/messenger/simple/node1_hlm/hlc.yml
+++ b/examples/messenger/simple/node1_hlm/hlc.yml
@@ -3,7 +3,7 @@ logging:
   - warn
   - erro
 applications:
-  - hidden-lake-kernel
-  - hidden-lake-service=pinger
-  - hidden-lake-service=messenger
-  - hidden-lake-adapter=tcp
+  - hlk
+  - hla-tcp
+  - hls-pinger
+  - hls-messenger
