--- a/examples/pinger/prod_test/recv_hlc/hlc.yml
+++ b/examples/pinger/prod_test/recv_hlc/hlc.yml
@@ -3,6 +3,6 @@ logging:
   - warn
   - erro
 applications:
-  - hidden-lake-kernel
-  - hidden-lake-service=pinger
-  - hidden-lake-adapter=tcp
+  - hlk
+  - hla-tcp
+  - hls-pinger
