--- a/cmd/hls/hls-filesharer/hls-filesharer.yml
+++ b/cmd/hls/hls-filesharer/hls-filesharer.yml
@@ -6,7 +6,5 @@ logging:
 - info
 - warn
 - erro
-address:
-  internal: 127.0.0.1:9541
-  external: 127.0.0.1:9542
+address: 127.0.0.1:9542
 connection: 127.0.0.1:9572
