--- a/examples/filesharer/Makefile
+++ b/examples/filesharer/Makefile
@@ -1,8 +1,12 @@
-.PHONY: default clean request
+.PHONY: default clean request-list request-info request-load
 default: clean 
 clean:
 	make -C ./prod_test clean
 	make -C ./routing clean
 	make -C ./simple clean
-request:
-	go run ./_request/main.go 
+request-list:
+	./_request/list.sh
+request-info:
+	./_request/info.sh
+request-load:
+	./_request/load.sh
