--- a/examples/pinger/Makefile
+++ b/examples/pinger/Makefile
@@ -1,8 +1,8 @@
-.PHONY: default clean request
+.PHONY: default clean request-ping
 default: clean 
 clean:
 	make -C ./prod_test clean
 	make -C ./routing clean
 	make -C ./simple clean
-request:
-	go run ./_request/main.go
+request-ping:
+	./_request/ping.sh
