--- a/examples/remoter/Makefile
+++ b/examples/remoter/Makefile
@@ -1,8 +1,8 @@
-.PHONY: default clean request
+.PHONY: default clean request request-exec
 default: clean 
 clean:
 	make -C ./prod_test clean
 	make -C ./routing clean
 	make -C ./simple clean
-request:
-	go run ./_request/main.go
+request-exec:
+	./_request/exec.sh
